--- a/frontend/register/style.css
+++ b/frontend/register/style.css
@@ -7,9 +7,13 @@ body{
     margin: 0%;
     font-family: Arial, Helvetica, sans-serif;
     display: grid;
+    background-color: #3a3a3a;
+}
+
+.center{
+    display: grid;
     justify-items: center;
     align-items: center;
-    background-color: #3a3a3a;
 }
 
 #main-holder{
